dinoco_docs/src/content/v0.0.2/ru-ru/orm/update-many.mdx
export const title = "update_many";

# update_many

Используется для одновременного обновления нескольких записей.

---

## Что вы можете сделать

- `.cond(...)`: ограничивает, какие записи могут быть обновлены.
- `.values(Vec&lt;M&gt;)`: определяет элементы, используемые при пакетном обновлении.
- `.returning::&lt;T&gt;()`: возвращает обновленные записи в виде типизированного списка.
- `.execute(&client)`: выполняет пакетное обновление.

## Возвращаемое значение

Без `.returning::&lt;T&gt;()` возвращаемое значение:

```rust
DinocoResult<()>
```

С `.returning::&lt;T&gt;()` возвращаемое значение становится:

```rust
DinocoResult<Vec<T>>
```

## Базовый пример

```rust
dinoco::update_many::<User>()
    .values(vec![
        User { id: 1, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 2, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Пример с возвращаемым значением

```rust
let updated = dinoco::update_many::<User>()
    .values(vec![
        User { id: 2, name: "Ana Batch".to_string() },
        User { id: 3, name: "Caio Batch".to_string() },
    ])
    .returning::<User>()
    .execute(&client)
    .await?;
```

## Пример с фильтром

```rust
dinoco::update_many::<User>()
    .cond(|x| x.active.eq(true))
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Пример с воркером

```rust
use database::*;

let _worker = workers()
    .on::<Vec<User>, _, _>("user.batch-updated", |job| async move {
        println!("Пользователи обновлены: {}", job.data.len());
        job.success();
    })
    .run()
    .await?;

dinoco::update_many::<User>()
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .enqueue("user.batch-updated")
    .execute(&client)
    .await?;
```

Узнайте больше о воркерах в [**`queues`**](/v0.0.2/orm/queues).

## Следующие шаги

- [**`update::&lt;M&gt;()`**](/v0.0.1/orm/update): традиционное обновление с условием.
- [**`find_and_update::&lt;M&gt;()`**](/v0.0.1/orm/find-and-update): атомарное обновление одной записи.
